--- a/package.json
+++ b/package.json
@@ -18,15 +18,26 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "proto:product": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto  --ts_proto_out=. ./src/order/proto/product.proto --ts_proto_opt=fileSuffix=.pb --ts_proto_opt=nestJs=true",
+    "proto:order": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto  --ts_proto_out=. ./src/order/proto/order.proto --ts_proto_opt=fileSuffix=.pb --ts_proto_opt=nestJs=true",
+    "proto:all": "npm run proto:order && npm run proto:product"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.6.7",
+    "@grpc/proto-loader": "^0.6.9",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/microservices": "^8.4.4",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.0.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.2.45"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -34,7 +45,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
-    "@types/node": "^16.0.0",
+    "@types/node": "^16.11.33",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -48,6 +59,7 @@
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
+    "ts-proto": "^1.112.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   },
